Vpc-ec2.yaml


AWSTemplateFormatVersion: '2010-09-09'
Description: Create Ec2 Machine and vpc

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  InstanceType:
    Type: String
    Default: t2.micro
  
  ImageId:
    Type: String
    Default: ami-0f1a5f5ada0e7da53
    
  MyAvailabilityZone:
    Description: Select the AZ
    Type: String
    Default: ap-south-1a

  VpcCIDR:
    Type: String
    Description: Enter the IP range.
    Default: 10.0.0.0/32

  PublicSubnet1CIDR:
    Type: String
    Description: choose publicsubnetcidr
    Default: 10.0.0.0/24

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref MySecurityGroup
      AvailabilityZone: !Ref MyAvailabilityZone
      SubnetId: !Ref PublicSubnet1

      Tags:
        - Key: Name
          Value: Demoec2  
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
      - Key: Name
        Value: Test-Vpc
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Test-IGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref MyVpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref MyVpc
      Tags:
         - Key: Name
           Value: Public-TestSubnet1

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: Public-RouteTable

  Route: 
    DependsOn: InternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable  
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway 

  PublicSubnet1RoutetableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId:  !Ref PublicSubnet1

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      
      GroupDescription: My SG with port 22 and 8080 inbound
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'          
          ToPort: '8080'
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: EC2-SG
      VpcId: !Ref MyVpc
